--- a/release/languages/languages.ini
+++ b/release/languages/languages.ini
@@ -4,3 +4,4 @@ French=French - Français
 Russian=Russian - русский
 ChineseSimplified=Chinese (Simplified) - 中文（简体）
 ChineseTraditional=Chinese (Traditional) - 中文（繁體）
+Spanish=Spanish - Español
