Keep setup language at start if available

--- a/release/languages/languages.ini
+++ b/release/languages/languages.ini
@@ -5,3 +5,7 @@ Russian=Russian - русский
 ChineseSimplified=Chinese (Simplified) - 中文（简体）
 ChineseTraditional=Chinese (Traditional) - 中文（繁體）
 Spanish=Spanish - Español
+
+[innosetup]
+en=English
+fr=French
