Remove ${CMAKE_INSTALL_PREFIX} and refactor renaming of binaries

--- a/CrashReporter/languages/CMakeLists.txt
+++ b/CrashReporter/languages/CMakeLists.txt
@@ -9,5 +9,5 @@ add_custom_target(CrashReporter_translations ALL DEPENDS ${QM_FILES})
 if(APPLE AND UNIX)
 	install(FILES ${QM_FILES} DESTINATION Grabber.app/Contents/Resources/crashreporter)
 else()
-	install(FILES ${QM_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Grabber/crashreporter)
+	install(FILES ${QM_FILES} DESTINATION share/Grabber/crashreporter)
 endif()
