--- a/languages/CMakeLists.txt
+++ b/languages/CMakeLists.txt
@@ -14,5 +14,5 @@ add_custom_target(General_translations ALL DEPENDS ${QM_FILES})
 if(APPLE AND UNIX)
 	install(FILES ${QM_FILES} DESTINATION Grabber.app/Contents/Resources/languages)
 else()
-	install(FILES ${QM_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Grabber/languages)
+	install(FILES ${QM_FILES} DESTINATION share/Grabber/languages)
 endif()
