Update languages.ini to reflect actual translations

--- a/release/languages/languages.ini
+++ b/release/languages/languages.ini
@@ -5,6 +5,12 @@ Russian=Russian - русский
 ChineseSimplified=Chinese (Simplified) - 中文（简体）
 ChineseTraditional=Chinese (Traditional) - 中文（繁體）
 Spanish=Spanish - Español
+Polish=Polish - Polskie
+German=German - Deutsche
+Indonesian=Indonesian - bahasa Indonesia
+Japanese=Japanese - 日本語
+Korean=Korean - 한국어
+Portuguese=Portuguese - Português
 
 [innosetup]
 en=English
