Add italian language

--- a/release/languages/languages.ini
+++ b/release/languages/languages.ini
@@ -8,6 +8,7 @@ Spanish=Spanish - Español
 Polish=Polish - Polskie
 German=German - Deutsche
 Indonesian=Indonesian - bahasa Indonesia
+Italian=Italiano
 Japanese=Japanese - 日本語
 Korean=Korean - 한국어
 Portuguese=Portuguese - Português
