Fix error on Windows running lupdate

--- a/src/gui-qml/languages/CMakeLists.txt
+++ b/src/gui-qml/languages/CMakeLists.txt
@@ -9,9 +9,9 @@ include(ListFilterRegex)
 listFilterRegex(TS_FILES_FOR_QM "YourLanguage.ts$")
 
 # Source files (used for 'location' and 'context' in TS files)
-file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_LIST_DIR}/../src/")
+file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_LIST_DIR}/../src/*")
 
 qt5_create_translation(QM_FILES_FOR_TS ${SOURCES} ${TS_FILES_FOR_TS}) # Re-generate TS and generate QM for 'YourLanguage'
 qt5_add_translation(QM_FILES ${TS_FILES_FOR_QM}) # Only generate QM for actual translations
 
-add_custom_target("gui-qml_translations" ALL DEPENDS ${TS_FILES_FOR_TS} ${QM_FILES_FOR_TS} ${QM_FILES})
+add_custom_target("gui-qml_translations" ALL DEPENDS ${QM_FILES_FOR_TS} ${QM_FILES})
